--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html>
 
@@ -8,13 +7,7 @@
 </head>
 
 <body>
-    {{> menus}}
     <h1>Главная страница</h1>
-
-    {{> footer}}
+    <div>{{getTime}}</div>
 </body>
 <html>
-
-    -->
-
-    <h1>Главная страница</h1>
